--- a/src/lib/color-picker/color-picker-selector.component.html
+++ b/src/lib/color-picker/color-picker-selector.component.html
@@ -3,43 +3,49 @@
   <canvas #blockCanvas [height]="selectorHeight" [width]="selectorWidth" id="picker"></canvas>
   <div #blockPointer class="mcc-picker-position" style="top: 0; left: 0;"></div>
 
-  <div #hueContainer class="mcc-colors-position" [style.height.px]="selectorHeight"
-       [ngClass]="{'alpha-enabled': showAlphaSelector}"
-       style="background-position-y: 0;">
+  <div
+    #hueContainer
+    class="mcc-colors-position"
+    [style.height.px]="selectorHeight"
+    [ngClass]="{ 'alpha-enabled': colorPickerCollectionService.alpha }"
+    style="background-position-y: 0;"
+  >
     <canvas #hueSelector [height]="stripHeight" [width]="stripWidth" id="colors"></canvas>
   </div>
 
-
-  <div *ngIf="showAlphaSelector" #alphaContainer class="mcc-alpha-position" [style.height.px]="selectorHeight"
-       style="background-position-y: 0;">
+  <div
+    *ngIf="colorPickerCollectionService.alpha"
+    #alphaContainer
+    class="mcc-alpha-position"
+    [style.height.px]="selectorHeight"
+    style="background-position-y: 0;"
+  >
     <canvas #alpha [height]="stripHeight" [width]="stripWidth" id="alpha"></canvas>
   </div>
-
 </div>
 
 <div class="mcc-color-picker-selector-preview" [style.backgroundColor]="tmpSelectedColorAsRgba$ | async">
   <ng-container *ngIf="!hideHexForms && !noColor">
     <form [formGroup]="hexForm">
       <mat-form-field class="hex-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput placeholder="HEX" formControlName="hexCode"/>
+        <input matInput placeholder="HEX" formControlName="hexCode" />
       </mat-form-field>
     </form>
 
     <form [formGroup]="rgbaForm">
       <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput type="number" [placeholder]="showAlphaSelector ? 'RGBA' : 'RGB'" formControlName="R"/>
+        <input matInput type="number" [placeholder]="colorPickerCollectionService.alpha ? 'RGBA' : 'RGB'" formControlName="R" />
       </mat-form-field>
       <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput type="number" formControlName="G"/>
+        <input matInput type="number" formControlName="G" />
       </mat-form-field>
       <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput type="number" formControlName="B"/>
+        <input matInput type="number" formControlName="B" />
       </mat-form-field>
 
-      <mat-form-field *ngIf="showAlphaSelector" class="rgb-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput type="number" formControlName="A"/>
+      <mat-form-field *ngIf="colorPickerCollectionService.alpha" class="rgb-input" floatLabel="always" [ngClass]="textClass">
+        <input matInput type="number" formControlName="A" />
       </mat-form-field>
     </form>
   </ng-container>
-
 </div>
