--- a/src/lib/color-picker/color-picker.component.html
+++ b/src/lib/color-picker/color-picker.component.html
@@ -4,20 +4,22 @@
     type="button"
     class="btn-picker"
     cdkOverlayOrigin
-    #trigger="cdkOverlayOrigin"
+    #triggerButton="cdkOverlayOrigin"
     [ngClass]="{ empty: selectedColor === emptyColor, disabled: disabled }"
     [style.backgroundColor]="selectedColor"
     (click)="toggle()"
   >
   </button>
 
-  <ng-template cdkConnectedOverlay cdkConnectedOverlayHasBackdrop
-               cdkConnectedOverlayBackdropClass="mcc-color-picker-backdrop"
-               [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isOpen"
-               (backdropClick)="backdropClick()">
-
+  <ng-template
+    cdkConnectedOverlay
+    cdkConnectedOverlayHasBackdrop
+    cdkConnectedOverlayBackdropClass="mcc-color-picker-backdrop"
+    [cdkConnectedOverlayOrigin]="triggerButton"
+    [cdkConnectedOverlayOpen]="isOpen"
+    (backdropClick)="backdropClick()"
+  >
     <ng-template [cdkPortalOutlet]="overlayPanel"></ng-template>
-
   </ng-template>
 </ng-container>
 
@@ -26,22 +28,26 @@
 
 <!-- color picker component content -->
 <ng-template cdkPortal #overlayPanel="cdkPortal">
-
-  <div class="mcc-color-picker-overlay mat-elevation-z6" [ngClass]="{'alpha-enabled': showAlphaSelector }"
-       role="dialog"
-       aria-label="Color picker">
-
-    <mcc-color-picker-selector *ngIf="!hideColorPickerSelector" [selectedColor]="tmpSelectedColor$ | async"
-                               [hideHexForms]="hideHexForms"
-                               [height]="colorPickerSelectorHeight"
-                               (changeSelectedColor)="updateTmpSelectedColor($event)">
+  <div class="mcc-color-picker-overlay mat-elevation-z6" [ngClass]="{ 'alpha-enabled': alpha }" role="dialog" aria-label="Color picker">
+    <mcc-color-picker-selector
+      *ngIf="!hideColorPickerSelector"
+      [selectedColor]="tmpSelectedColor$ | async"
+      [hideHexForms]="hideHexForms"
+      [height]="colorPickerSelectorHeight"
+      (changeSelectedColor)="updateTmpSelectedColor($event)"
+    >
     </mcc-color-picker-selector>
 
     <!-- show used colors on top -->
     <ng-container *ngIf="!hideUsedColors && usedColorsPosition == 'top'">
-      <mcc-color-picker-collection [label]="usedColorLabel" [size]="usedSizeColors"
-                                   [transparent]="!hideTransparent" [hideEmpty]="hideEmpty"
-                                   [colors]="usedColors$ | async" (changeColor)="updateTmpSelectedColor($event)">
+      <mcc-color-picker-collection
+        [label]="usedColorLabel"
+        [size]="usedSizeColors"
+        [transparent]="!hideTransparent"
+        [hideEmpty]="hideEmpty"
+        [colors]="usedColors$ | async"
+        (changeColor)="updateTmpSelectedColor($event)"
+      >
       </mcc-color-picker-collection>
     </ng-container>
 
@@ -50,14 +56,18 @@
 
     <!-- show used colors on bottom -->
     <ng-container *ngIf="!hideUsedColors && usedColorsPosition == 'bottom'">
-      <mcc-color-picker-collection [label]="usedColorLabel" [size]="usedSizeColors"
-                                   [transparent]="!hideTransparent" [hideEmpty]="hideEmpty"
-                                   [colors]="usedColors$ | async" (changeColor)="updateTmpSelectedColor($event)">
+      <mcc-color-picker-collection
+        [label]="usedColorLabel"
+        [size]="usedSizeColors"
+        [transparent]="!hideTransparent"
+        [hideEmpty]="hideEmpty"
+        [colors]="usedColors$ | async"
+        (changeColor)="updateTmpSelectedColor($event)"
+      >
       </mcc-color-picker-collection>
     </ng-container>
 
     <div *ngIf="!hideButtons" class="mcc-color-picker-actions">
-
       <button mat-button role="button" aria-label="Cancel" (click)="cancelSelection()">
         {{ btnCancelLabel }}
       </button>
@@ -65,9 +75,6 @@
       <button mat-button role="button" aria-label="Confirm" (click)="confirmSelectedColor()">
         {{ btnConfirmLabel }}
       </button>
-
     </div>
-
   </div>
-
 </ng-template>
