fix(color-picker): fixed tests

--- a/src/demo-app/app/color-picker/components/color-picker-examples.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-examples.component.html
@@ -11,7 +11,7 @@
   </mat-card-content>
 </mat-card>
 
-<!-- WITHOUT OVERLAY -->
+<!-- WITHOUT OVERLAY + ALPHA -->
 <mat-card>
   <mat-card-header>
     <mat-card-title>
