feat(color-picker): round corners, @HostListeners, openOnFocus for mccColorPickerOrigin, examples

--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -20,9 +20,9 @@
     </tr>
     <tr>
       <td>
-        <code>alpha: boolean, default: false</code>
+        <code>alpha: boolean</code>
       </td>
-      <td class="api-description">Enable alpha selector</td>
+      <td class="api-description">Enable alpha selector, default: false</td>
     </tr>
     <tr>
       <td>
@@ -285,6 +285,24 @@
 
 <h3>MccColorPickerOrigin</h3>
 <p>This directive goes on the element (input, textarea or select) that will be connected to the color picker.</p>
+
+<h4>Inputs</h4>
+<table class="table-api-documentation">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>
+      <code>mccColorPickerOrigin: 'openOnFocus' | 'default'</code>
+    </td>
+    <td class="table-api-documentation">Enable opening color picker on focus, default: 'default'</td>
+  </tr>
+  </tbody>
+</table>
 
 <h4>Outputs</h4>
 <table class="table-api-documentation">
